# sprokkel

./: Cargo.toml  README.md  flake.nix  rustfmt.toml
.github/workflows/: build-site.yml
example/sprokkel.uint.one/: sprokkel.toml
example/sprokkel.uint.one/assets/js/: main.js
example/sprokkel.uint.one/cat/css/style.css/: fonts.css  highlight.css  main.css
example/sprokkel.uint.one/entries/assets/: 10_static-assets.dj
example/sprokkel.uint.one/entries/entries/: 10_writing.dj  20_front-matter.dj  30_syntax-highlighting.dj
example/sprokkel.uint.one/entries/getting-started/: 10_installation.dj  20_usage.dj  30_site-config.dj
example/sprokkel.uint.one/entries/index/: index.dj  index.md
example/sprokkel.uint.one/entries/mini-library-of-babel/: babel1.dj  babel2.dj  babel3.dj  babel4.dj  babel5.dj  babel6.dj  babel7.dj  babel8.dj
example/sprokkel.uint.one/entries/templates/: 10_entry-templates.dj  20_page-templates.dj  30_pagination.dj  40_entry-variable.dj
example/sprokkel.uint.one/templates/: _entry.html  _index.html  pagination-test.html
example/sprokkel.uint.one/templates/_partials/: base.html
src/: cli.rs  config.rs  ctx.rs  djot.rs  front_matter.rs  highlight.rs  images.rs  ir_markup.rs  main.rs  markdown.rs  out.rs  render.rs  tests.rs  types.rs  utils.rs
