[package]
name = "sprokkel"
version = "0.1.0"
edition = "2021"
description = "A static site generator"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/tomcur/sprokkel"

[features]
default = []

katex = ["dep:katex"]
latex2mathml = ["dep:latex2mathml"]

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
jotdown = "0.4"
notify-debouncer-full = "0.3"
minijinja = { version = "1.0", features = ["loader"] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
toml = "0.8"
walkdir = "2.5"

log = "0.4"
simplelog = { version = "0.12.0", features = ["paris"] }

tree-sitter-highlight = "0.20"

tree-sitter-bash = "0.20"
tree-sitter-c = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-djot = { git = "https://github.com/treeman/tree-sitter-djot", rev = "bc94a2867f7a1040c416212207e7e28e79ef0339" }
tree-sitter-nix = "0.0.1"
tree-sitter-javascript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-typescript = "0.20"

latex2mathml = { version = "0.2", optional = true }
katex = { version = "0.4.6", optional = true }
